src/objects/Rate_Sheet_Item__c.object
<CustomObject>
    <fields>
        <fullName>Commissionable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Commissionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <label>Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Default Original</fullName>
                </value>
                <value>
                    <fullName>Default Copy</fullName>
                </value>
                <value>
                    <fullName>Default Exhibit</fullName>
                </value>
                <value>
                    <fullName>Default Expedite</fullName>
                </value>
                <value>
                    <fullName>Default Video</fullName>
                </value>
                <value>
                    <fullName>Default Realtime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Text__c</fullName>
        <description>Text to include on every invoice</description>
        <label>Invoice Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Item__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Rate Sheet Items</relationshipLabel>
        <relationshipName>Rate_Sheet_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <formula>IF(TEXT(Default__c) == &apos;Default Original&apos;, 1,
IF(TEXT(Default__c) == &apos;Default Copy&apos;,2, 
IF(TEXT(Default__c) == &apos;Default Exhibit&apos;,3,
IF(TEXT(Default__c) == &apos;Default Expedite&apos;,4, 
IF(TEXT(Default__c) == &apos;Default Expedite&apos;,5,
IF(TEXT(Default__c) == &apos;Always&apos;,6,7 )
)) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <label>Rate Sheet</label>
        <referenceTo>Rate_Sheet__c</referenceTo>
        <relationshipLabel>Rate Sheet Items</relationshipLabel>
        <relationshipName>Rate_Sheet_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ratio__c</fullName>
        <label>Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All States</fullName>
                    <default>true</default>
                    <label>All States</label>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT( Item__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Default_With_Type_For_Rate_Sheet__c</fullName>
        <label>Unique Default With Type For Rate Sheet</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Units_of_Measure__c</fullName>
        <label>Units of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Page</fullName>
                </value>
                <value>
                    <fullName>Per Transcript</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Per Person</fullName>
                </value>
                <value>
                    <fullName>Per Job</fullName>
                </value>
                <value>
                    <fullName>Per Day</fullName>
                </value>
                <value>
                    <fullName>Per Half Day</fullName>
                </value>
                <value>
                    <fullName>Per Kit</fullName>
                </value>
                <value>
                    <fullName>Per Session</fullName>
                </value>
                <value>
                    <fullName>Per Disk</fullName>
                </value>
                <value>
                    <fullName>Per Mile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rate Sheet Item</label>
    <nameField>
        <displayFormat>RSI-{00000}</displayFormat>
        <label>Rate Sheet Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Sheet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>